# c-plus-plus

./: CMakeLists.txt  cin-concept.cpp  cin-conditional.cpp  implict-typecasting.cpp  lower-upper-case.cpp  normal1.cpp  outputf.in  simple-conditional.cpp  simple.cpp  size-of-datatype.cpp  trees.cpp
.github/workflows/: codeql-analysis.yml
Operators/: Basic-Arithmatic1.cpp  Basic-Arithmatic2.cpp  Basic-Arithmatic3.cpp  logical-and.cpp  logical-not.cpp  logical-or.cpp  relational.cpp
conditionals/: assigned-if.cpp  if-1.cpp  if-else.cpp  if-else_if-else.cpp  if.cpp  nested-if-1.cpp
loops/: 1-to-n.cpp
practice\/: size-of-datatype  size-of-datatype.cpp
